# TimeKeeper

./: .gitignore  Cargo.toml  README.md  README_ru.md  build.py  build.rs
assets/: AppRun  TimeKeeper.desktop  TimeKeeper.toml  gallery.md  gen_appimage.sh
flatpak/: com.mskrasnov.TimeKeeper.json
flatpak/assets/: com.mskrasnov.TimeKeeper.desktop
i18n/en/: time_keeper.ftl
i18n/ru/: time_keeper.ftl
site/: authors.html  download.html  gruvbox-code.css  index.html  screenshots.html  style.css
src/: autostart.rs  conf.rs  consts.rs  external_cmd.rs  i18n.rs  main.rs  pathes.rs  stats.rs  time.rs  traits.rs  ui.rs
src/ui/: colors.rs  notify.rs  update.rs  utils.rs  view.rs  widget.rs
src/ui/view/: about.rs  main.rs  settings.rs
wix/: License.rtf  main.wxs
