[package]
name = "time_keeper"
version = "0.3.0"
edition = "2024"
description = "Программа для учёта времени работы за ПК"
build = "build.rs"
authors = ["Michail Krasnov <https://github.com/mskrasnov>"]
license = "MIT"
homepage = "https://mskrasnov.github.io/TimeKeeper/"
repository = "https://github.com/mskrasnov/TimeKeeper"
readme = "README.md"
keywords = ["time", "timer", "coutdown", "timekeeper", "time_keeper", "TimeKeeper"]
categories = ["date-and-time"]

[profile.release]
lto = true
strip = true
debug = false
panic = "abort"
opt-level = "s"

[dependencies]
anyhow = "1.0.97"
iced = { version = "0.13.1", default-features = false, features = [
    "tiny-skia",
    "image",
    "tokio",
    "advanced",
] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.44.1", features = ["full"] }
toml = "0.8.20"

[target.'cfg(windows)'.dependencies]
winrt-notification = "0.5.1"

[target.'cfg(windows)'.build-dependencies]
winresource = "0"

[target.'cfg(unix)'.dependencies]
notify-rust = "4.11.6"

[package.metadata.winresource]
ProductName = "TimeKeeper - a program to track the time a user works on a PC"
ProductVersion = "v0.3.0"
LegalCopyright = "Copyright © 2025 Michail Krasnov <https://github.com/mskrasnov>"
