[package]
name = "time_keeper"
version = "1.0.0"
edition = "2024"
description = "TimeKeeper is the simplest cross-platform program for PC time tracking. It is used to periodically remind the user of the need to take breaks while working on a PC."
build = "build.rs"
authors = ["Michail Krasnov <https://github.com/mskrasnov>"]
license = "MIT"
homepage = "https://timekeepersoft.github.io/"
repository = "https://github.com/TimeKeeperSoft/TimeKeeper"
readme = "README.md"
keywords = ["time", "timer", "coutdown", "TimeKeeper"]
categories = ["date-and-time", "gui"]
exclude = [".github", "site"]

[profile.release]
lto = true
strip = true
debug = false
panic = "abort"
opt-level = "s"

[dependencies]
anyhow = "1.0.97"
chrono = "0.4.40"
home = "0.5.11"
i18n-embed = { version = "0.15.3", features = ["fluent-system", "desktop-requester"] }
i18n-embed-fl = "0.9.3"
iced = { version = "0.13.1", default-features = false, features = [
    "tiny-skia",
    "image",
    "tokio",
    "advanced",
] }
lazy_static = "1.5.0"
rust-embed = "8.7.0"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.44.1", features = ["full"] }
toml = "0.8.20"

[target.'cfg(windows)'.dependencies]
winrt-notification = "0.5.1"

[target.'cfg(windows)'.build-dependencies]
winresource = "0"

[target.'cfg(unix)'.dependencies]
notify-rust = "4.11.6"

[package.metadata.winresource]
ProductName = "TimeKeeper is the simplest cross-platform PC time-tracking program. It periodically reminds users to take breaks while working on their computers."
ProductVersion = "v1.0"
LegalCopyright = "Copyright © 2025 Michail Krasnov <https://github.com/mskrasnov>"

[package.metadata.deb]
maintainer = "Michail Krasnov <https://github.com/mskrasnov>"
copyright = "2025, Michail Krasnov <https://github.com/mskrasnov>"
license-file = ["LICENSE", "4"]
depends = "$auto"
section = "utility"
priority = "optional"
assets = [
    ["target/release/time_keeper", "usr/bin/", "755"],
    ["assets/logo.svg", "usr/share/icons/hicolor/scalable/apps/TimeKeeper.svg", "644"],
    ["assets/TimeKeeper.desktop", "usr/share/applications/", "644"],
]
